# generate-pdf-resume

./: README.md  main.py  pyproject.toml
output/: input.md  output.tex
src/zwtil/generate_pdf_resume/: cli.py
src/zwtil/generate_pdf_resume/res/: awesome-cv.cls  example.toml  template.tex
