[project]
name = "zwtil.generate-pdf-resume"
version = "0.1.2"
description = ""
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]

dependencies = [
    "click>=8.1.7",
    "zuu-doc @ git+https://github.com/zwtil/zuu_doc.git",
    "toml>=0.10.2",
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"zwtil.generate-pdf-resume" = "zwtil.generate_pdf_resume.cli:CLICK"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zwtil"]
include = ["src/zwtil/generate_pdf_resume/res/*"]
